--- a/javawebapp-deployment.yml
+++ b/javawebapp-deployment.yml
@@ -1,38 +1,34 @@
-#---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: javaapp
-  namespace: test-ns
-  labels:
-    app: nginx
+  name: my-ak-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: demo
+      app: java-app
   template:
     metadata:
       labels:
-        app: demo
+        app: java-app
     spec:
       containers:
-      - name: java
+      - name: my-java-app
         image: account1996/java:1
+        imagePullPolicy: Always
         ports:
-        - containerPort: 80  
----
-# Node Port Service
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  labels:
-#    name: javawebapp
-#  name: javawebapp
-#spec:
-#  type: NodePort
-#  ports:
-#    - port: 8080
-#      targetPort: 8080
-#  selector:
-#    name: javawebapp
+        - containerPort: 8085
+# service type loadbalancer
+#---
+apiVersion: v1
+kind: Service
+metadata:
+  name: java-app-svc
+spec:
+  selector:
+    app: java-app
+  ports:
+    - protocol: TCP
+      port: 8085
+      targetPort: 8085
+  type: LoadBalancer
