--- a/javawebapp-deployment.yml
+++ b/javawebapp-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-ak-deployment
-  namespaces: test-ns
+  namespace: test-ns
 spec:
   replicas: 2
   selector:
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: java-app-svc
-  namespaces: test-ns
+  namespace: test-ns
 spec:
   selector:
     app: java-app
