--- a/javawebapp-deployment.yml
+++ b/javawebapp-deployment.yml
@@ -21,16 +21,16 @@ spec:
         - containerPort: 8085
 # service type loadbalancer
 #---
-apiVersion: v1
-kind: Service
-metadata:
-  name: java-app-svc
-  namespace: test-ns
-spec:
-  selector:
-    app: java-app
-  ports:
-    - protocol: TCP
-      port: 8085
-      targetPort: 8085
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: java-app-svc
+#   namespace: test-ns
+# spec:
+#   selector:
+#     app: java-app
+#   ports:
+#     - protocol: TCP
+#       port: 8085
+#       targetPort: 8085
   type: LoadBalancer
