--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <name>demo Releases Nexus Repository</name>
 	      <url>http://65.0.91.177:8081/repository/test-release/</url>
 	    </repository>
 	    <snapshotRepository>
