--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
 	<groupId>com.mt</groupId>
 	<artifactId>java-web-app</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<name>java-web-app</name>
-	<url>http://mithuntechnologies.com</url>
+	<url></url>
 	
 	<description>Maven Web Project</description>
 
 	<organization>
-		<name>Mithun Technologies</name>
-		<url>http://mithuntechnologies.com/</url>
+		<name>java-web-app</name>
+		<url></url>
 	</organization>
 
 	<properties>
