--- a/tomcat-installation.yaml
+++ b/tomcat-installation.yaml
@@ -12,28 +12,26 @@
        shell: /sbin/nologin
    - name: 3) Get Installer
      get_url:
-      url: https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.58/bin/apache-tomcat-9.0.58.tar.gz
+      url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.71/bin/apache-tomcat-9.0.71.tar.gz
       dest: /tmp/
    - name: 4) copy the file from TMP dir
      copy:
-      src: /tmp/apache-tomcat-9.0.58.tar.gz
+      src: /tmp/apache-tomcat-9.0.71.tar.gz
       dest: /usr/local/
       remote_src: yes
    - name: 5) Install the Tomcat
      unarchive:
-      src: /usr/local/apache-tomcat-9.0.58.tar.gz
+      src: /usr/local/apache-tomcat-9.0.71.tar.gz
       dest: /usr/local/
       remote_src: yes
    - name: 6) Changing the Tomcat File Ownership, Group and Permissions
      file:
-      path: /usr/local/apache-tomcat-9.0.58
-      owner: tomcat
-      group: tomcat
+      path: /usr/local/apache-tomcat-9.0.71
       recurse: yes
       state: directory
    - name: 7) Make the Tomcat file symbollic
      file:
-      src: /usr/local/apache-tomcat-9.0.58
+      src: /usr/local/apache-tomcat-9.0.71
       dest: /usr/local/tomcat9
       owner: tomcat
       group: tomcat
@@ -54,11 +52,11 @@
           User = tomcat
           Group = tomcat
           Type = oneshot
-          PIDFile =/usr/local/apache-tomcat-9.0.58/tomcat.pid
+          PIDFile =/usr/local/apache-tomcat-9.0.71/tomcat.pid
           RemainAfterExit = yes
-          ExecStart =/usr/local/apache-tomcat-9.0.58/bin/startup.sh
-          ExecStop =/usr/local/apache-tomcat-9.0.58/bin/shutdown.sh
-          ExecReStart =/usr/local/apache-tomcat-9.0.58/bin/shutdown.sh;/usr/local/apache-tomcat-9.0.58/bin/startup.sh
+          ExecStart =/usr/local/apache-tomcat-9.0.71/bin/startup.sh
+          ExecStop =/usr/local/apache-tomcat-9.0.71/bin/shutdown.sh
+          ExecReStart =/usr/local/apache-tomcat-9.0.71/bin/shutdown.sh;/usr/local/apache-tomcat-9.0.71/bin/startup.sh
           [Install]
           WantedBy = multi-user.target
    - name: 10) chmod 755 tomcat.service
@@ -72,5 +70,5 @@
       daemon_reload: yes
       enabled: yes
    - name: Apply tags to tasks within included file when using free-form
-     ansible.builtin.include_tasks: deploy-app.yml
+     ansible.builtin.include_tasks: appdeploy.yaml
 ...
