--- a/appdeploy.yaml
+++ b/appdeploy.yaml
@@ -4,4 +4,4 @@
     - name: Deploy in tomcat
       copy:
         src: /var/lib/jenkins/workspace/demoapplication/target/java-web-app-2.0.0.war
-        dest: /home/ubuntu/apache-tomcat-9.0.71/webapps
+        dest: /home/ubuntu/tomcat/webapps
